# Protocolos

./: .gitignore  Makefile  README.md
01 - Comunicacao/: Makefile  client.c  server.c
02 - Thread/: thread  thread.c
03 - Graficos/: Makefile  grafico.c  grafico2.c
Client/: ProgClient.c
Graficos/: grafico.c
src/: .bib_graf.c.kate-swp  CMakeLists.txt  bib_graf.c  client.c  grafico.c  server.c  testes.c
